# kiro-gateway

./: pyproject.toml
kiro/: auth.py  config.py  converters_anthropic.py  mcp_tools.py  models_anthropic.py
kiro_gateway/: __init__.py  __main__.py
tests/unit/: test_mcp_tools.py  test_models_anthropic.py
