[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiro-gateway"
version = "2.4.0"
description = "OpenAI-compatible proxy server for Kiro AI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
kiro-gateway = "kiro_gateway.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["kiro", "kiro_gateway"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
